src-ken&y/objects/Pick_Sort_Criteria__c.object
<CustomObject>
    <customHelpPage>HelpStockpoints</customHelpPage>
    <description>Sort criteria to be used during picking inventory.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the sort criteria is active.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>the company for which this sort criteria should be applied.</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipName>Movement_Sort_Criterias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>the customer for which this sort criteria should be applied.</description>
        <inlineHelpText>For sales orders, the criteria can be applied at the company or customer level. If customer is not specified, the sort criteria applies to the company.</inlineHelpText>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipName>Movement_Sort_Criterias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Null_Values__c</fullName>
        <description>In which order the empty values should be sorted.</description>
        <inlineHelpText>Determines the order in which inventory is picked if the Sort Field value is missing from the inventory. For example, if you allocate by expiration date, but the expiration date is missing, then the Null Value (first or last) is applied.</inlineHelpText>
        <label>Null Values</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Last</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sort_Field__c</fullName>
        <description>The field of the Skid object to sort the available skids by.</description>
        <inlineHelpText>Used in conjunction with the Sort Order, these two values determine the order in which inventory is picked. For example for FIFO methodology, the sort field may be set to Expiration_Date__c and the Sort Order to Ascending.</inlineHelpText>
        <label>Sort Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quantity__c</fullName>
                </value>
                <value>
                    <fullName>Date_Received__c</fullName>
                </value>
                <value>
                    <fullName>Expiration_Date__c</fullName>
                </value>
                <value>
                    <fullName>Consigned_Owner__r.Name</fullName>
                </value>
                <value>
                    <fullName>Bin__r.Picking_Order__c</fullName>
                </value>
                <value>
                    <fullName>Lot__r.Name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>Sort order to sort the available skids during picking.</description>
        <label>Sort Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asc</fullName>
                </value>
                <value>
                    <fullName>Desc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sort_Priority__c</fullName>
        <description>The order in which the sort criteria should be applied when there are multiple sort criteria.</description>
        <label>Sort Priority</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <description>Unique key for pick sort criteria.</description>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Pick Sort Criteria</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Company__c</columns>
        <columns>Null_Values__c</columns>
        <columns>Sort_Field__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Sort_Priority__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pick Sort Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pick Sort Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>